Added JEE dependencies